2005-10-01  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/Makefile.am: Distribute 05lvm.

	* schroot/setup/10mount: Use new LVM variables, so snapshot names
	and mount locations are as set by the session.  Remove mount
	directory after unmounting, but only if it's under $MOUNT_DIR.

	* schroot/setup/05lvm: Use new LVM variables, so snapshot names
	and mount locations are as set by the session.

	* schroot/setup/00check, schroot/session/00check: Add MOUNT_DIR,
	SESSION_ID, CHROOT_LVM_SNAPSHOT_NAME and
	CHROOT_LVM_SNAPSHOT_DEVICE.

	* schroot/schroot.c
	(parse_options): Free the option context after use.
	(main): If a session ID was not specified, generate a UUID for the
	session.
	(main): Free the chroot list to make valgrind happy.

	* schroot/schroot.1.in: Document MOUNT_DIR, SESSION_ID,
	CHROOT_LVM_SNAPSHOT_NAME and CHROOT_LVM_SNAPSHOT_DEVICE
	environment variables.

	* schroot/sbuild-session.c
	(sbuild_session_get_session_id): session-id is no longer required
	to be a UUID.
	(sbuild_session_set_session_id): session-id is no longer required
	to be a UUID.  Allow setting of arbitrary strings.
	(sbuild_session_setup_chroot): Export MOUNT_DIR and SESSION_ID in
	the environment.
	(sbuild_session_run): Set the chroot mount location if the chroot
	did not already do so.
	(sbuild_session_run): For LVM snapshot chroots, set the snapshot
	name to the session ID.
	(sbuild_session_run): Cascade error handling properly on failure.
	(sbuild_session_class_init): Update session-id documentation now
	it is no longer a strict UUID.

	* schroot/sbuild-session.h (struct _SbuildSession): Change
	session_id type from uuid_t to gchar *.

	* schroot/sbuild-config.c (sbuild_config_load): Free GIOChannel,
	file data buffer and GKeyFile structure after use.

	* schroot/sbuild-chroot-lvm-snapshot.c
	(sbuild_chroot_lvm_snapshot_print_config): Don't print NULL
	values.
	(sbuild_chroot_lvm_snapshot_setup): Don't set NULL values.  Set